public/holy-grid/index.css
/* https://bitsofco.de/holy-grail-layout-css-grid */
/* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout */

body {
  display: grid;

  grid-template-areas:
    "header header"
    "main   aside"
    "footer footer";

  grid-template-columns:
    1fr 30vw;

  grid-template-rows:
    10vh 80vh 10vh
}

body > header { grid-area: header }
body > footer { grid-area: footer }

